welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:12: error: value update is not a member of Boolean
haveBaggle() = vuBiscuit 
^